<resources>
    <string name="app_name">Contact</string>
    <string name="action_settings">Settings</string>
    <string name="tambah_teman">Tambah Teman</string>
    <string name="nama">Nama</string>
       <string name="telp">Telp</string>
    <string name="alamat">Alamat</string>
    <string name="email">Email</string>
    <string name="simpan">simpan</string>
    <string-array name="gender_list">
        <item>Pilih Jenis Kelamin</item>
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>
