<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambah_teman"
            android:textSize="25dp"
            android:layout_margin="16dp"
            android:textColor="#000000"
            android:fontFamily="sans-serif"
            android:layout_gravity="center_horizontal"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"/>

    <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:textColorHint="#CCCCCC"
            android:textColor="#000000"
            android:inputType="text"
            android:imeOptions="actionDone"/>

    <Spinner
            android:layout_marginTop="16dp"
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:entries="@array/gender_list"/>

    <EditText
            android:id="@+id/edtTelp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="#CCCCCC"
            android:textColor="#000000"
            android:inputType="number"
            android:imeOptions="actionNext"/>

    <EditText
            android:id="@+id/edtEmail"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telp"
            android:textColorHint="#CCCCCC"
            android:textColor="#000000"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"/>

    <EditText
            android:id="@+id/edtAdress"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:hint="@string/alamat"
            android:textColorHint="#CCCCCC"
            android:textColor="#000000"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:imeOptions="actionDone"/>

    <Button
            android:id="@+id/Save"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan"/>


</LinearLayout>